--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ main {
   height: 100vh;
   display: grid;
   place-items: center;
+  position: relative;
 }
 .board {
   position: relative;
@@ -47,4 +48,32 @@ main {
 
 .played {
   background-color: red;
+}
+.modal {
+  position: absolute;
+  background: white;
+  border: 0.2rem solid black;
+
+  place-items: center;
+  text-transform: uppercase;
+  width: 50vw;
+  height: 70vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  display: none;
+}
+
+.show-modal {
+  display: grid;
+  align-content: center;
+  gap: 2rem;
+}
+.replay {
+  font-size: 1.25rem;
+  text-transform: uppercase;
+  padding: 0.5rem 0.75rem;
+  background-color: green;
 }
